# sequgen

./: .coveragerc  .gitignore  .prospector.yml  .pylintrc  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  NOTICE  README.dev.md  README.md  README.rst  TS_generator.py  plotting_functions.py  project_setup.rst  setup.cfg  setup.py  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: fair-software.yml  linting.yml  sonarcloud.yml  (+1 more)
TS_types/: TS_type_bemchmark1_01.yaml  TS_type_bemchmark1_02.yaml  TS_type_bemchmark1_03.yaml  TS_type_bemchmark1_04.yaml  TS_type_bemchmark1_05.yaml  TS_type_show_variety.yaml  TS_type_simple_benchmark_01.yaml  TS_type_simple_benchmark_02.yaml  TS_type_simple_benchmark_03.yaml  TS_type_simple_benchmark_04.yaml  TS_type_simple_benchmark_05.yaml  TS_type_test.yaml  TS_type_test000.yaml  TS_type_test001.yaml  TS_type_test002.yaml  TS_type_test003.yaml
coverage/: README.md
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: TS_dataset_generation.ipynb  TS_dataset_generation_benchmarking1.ipynb  TS_generation_example.ipynb  prototype_TS_generation.ipynb  radar_chart.ipynb
sequgen/: TS_plotting.py  dimension.py  parameter_space.py
test/: test_crude.py  test_crude_test.py  test_mvp.py
tests/: conftest.py  test_dimension.py  test_dummy.py  test_five_models.py  test_lint.py  test_mvp.py  test_parameter_space.py  test_sample_uniform_random.py  test_sequgen.py  test_version.py
ts_generator/: TS_generator.py  dimension.py  parameter_space.py
(+22 files in other folders)
