[bumpversion]
current_version = 0.1.0

[bumpversion:file:sequgen/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:setup.py]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:CITATION.cff]
search = version: "{current_version}"
replace = version: "{new_version}"

[metadata]
description-file = README.md

[aliases]
test = pytest

[coverage:run]
branch = True
source = sequgen

[tool:pytest]
testpaths = tests
addopts = --cov --cov-config=.coveragerc --cov-report html --cov-report term --cov-report xml

[tool:isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = sequgen
src_paths = sequgen,tests,livetests
line_length = 120
